tests/snapshots/examples_fixtures/hint_demos__inline_labels_demo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/hint_demos/inline_labels_demo.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify matching '+' operands (Int+Int, Float+Float, or String+String) with String and Int.

  --> examples/hint_demos/inline_labels_demo.flx:5:14
  |
5 | let result = "hello" + 123;
  |              ^^^^^^^^^^^^^
  |              ------------- expected matching '+' operands (Int+Int, Float+Float, or String+String), found String and Int
  |              ------------- operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify String with Int.

  --> examples/hint_demos/inline_labels_demo.flx:9:1
  |
9 | add("text", 456);
  | ^^^^^^^^^^^^^^^^
  | ---------------- expected String, found Int

Found 2 errors.
== stdout ==
<not executed>
